# eosal

./: .gitignore  CMakeLists.pekka  CMakeLists.pekka-test  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  eosal.h  eosal_linux_config.X  eosal_windows_config.X  eosalx.h  library.json  library.pekka  platformio.ini  sdkconfig  sdkconfig.eosal-esp-wrover-kit-espidf.old  sdkconfig.eosal-esp32cam-arduino
code/: CMakeLists.txt  osal_espidf_dummy_app_main.c
code/console/arduino/: osal_sysconsole.cpp
code/console/common/: osal_console.h  osal_sysconsole.h
code/console/duino/: osal_duino_sysconsole.cpp  osal_sysconsole.cpp
code/console/esp32/: osal_esp32_sysconsole.c
code/console/linux/: osal_linux_sysconsole.c  osal_sysconsole.c
code/console/metal/: osal_metal_sysconsole.c  osal_sysconsole.c
code/console/windows/: osal_sysconsole.c  osal_windows_sysconsole.c
code/debugcode/common/: osal_debug.c  osal_debug.h
code/defs/arduino/: osal_defs.h  osal_types.h
code/defs/common/: osal_common_defs.h  osal_common_post_defs.h  osal_common_pre_defs.h  osal_global.c  osal_global.h  osal_minimalistic.h  osal_state_bits.h  osal_status.h
code/defs/duino/: osal_defs.h  osal_duino_quiet.c  osal_esp32_quiet.c  osal_types.h
code/defs/esp/: osal_defs.h  osal_types.h
code/defs/esp32/: osal_defs.h  osal_esp32_quiet.c  osal_types.h
code/defs/linux/: osal_defs.h  osal_linux_quiet.c  osal_types.h
code/defs/metal/: osal_defs.h  osal_metal_quiet.c  osal_types.h
code/defs/windows/: osal_defs.h  osal_types.h  osal_windows_quiet.c
code/error/common/: osal_error.c  osal_error.h
code/event/arduino/: osal_event.cpp
code/event/boost/: osal_event.c
code/event/common/: osal_event.h  osal_os_event_list.c
code/event/freertos/: osal_event.cpp  osal_freertos_event.cpp
code/event/linux/: osal_event.c  osal_linux_event.c
code/event/metal/: osal_event.c
code/event/windows/: osal_event.c  osal_windows_event.c
code/initialize/arduino/: osal_os_initialize.cpp
code/initialize/common/: osal_initialize.c  osal_initialize.h
code/initialize/duino/: osal_duino_initialize.cpp  osal_os_initialize.cpp
code/initialize/esp/: osal_os_initialize.c
code/initialize/esp32/: osal_esp32_dummy_app_main.cpp  osal_esp32_initialize.c  osal_esp32_initialize.cpp
code/initialize/linux/: osal_linux_initialize.c  osal_os_initialize.c
code/initialize/metal/: osal_metal_initialize.c  osal_os_initialize.c
code/initialize/windows/: osal_os_initialize.c  osal_windows_initialize.c
code/int64/common/: osal_int64.c  osal_int64.h
code/memory/arduino/: osal_sysmem.cpp
code/memory/common/: osal_memclear.c  osal_memcmp.c  osal_memcpy.c  osal_memmove.c  osal_memory.c  osal_memory.h  osal_psram.h  osal_sysmem.h
code/memory/duino/: osal_duino_sysmem.cpp  osal_sysmem.cpp
code/memory/esp32/: osal_esp32_psram.c  osal_esp32_sysmem.cpp
code/memory/linux/: osal_linux_sysmem.c  osal_sysmem.c
code/memory/metal/: osal_metal_sysmem.c  osal_sysmem.c
code/memory/windows/: osal_sysmem.c  osal_windows_sysmem.c
code/mutex/arduino/: osal_mutex.cpp
code/mutex/boost/: osal_mutex.c
code/mutex/common/: osal_interrupt_list.c  osal_interrupt_list.h  osal_mutex.h
code/mutex/freertos/: osal_freertos_mutex.cpp  osal_mutex.cpp
code/mutex/linux/: osal_linux_mutex.c  osal_mutex.c
code/mutex/metal/: osal_mutex.c
code/mutex/windows/: osal_mutex.c  osal_windows_mutex.c
code/resmon/common/: osal_resource_monitor.c  osal_resource_monitor.h
code/string/common/: osal_char.h  osal_int_to_str.c  osal_int_to_string.c  osal_str_to_int.c  osal_strchr.c  osal_strcmp.c  osal_strcnmp.c  osal_strechr.c  osal_string.h  osal_strlen.c  osal_strncat.c  osal_strncpy.c  osal_strnicmp.c  osal_strstr.c
code/thread/arduino/: osal_thread.cpp  osal_thread_priority.cpp
code/thread/boost/: osal_thread.cpp
code/thread/common/: osal_thread.h
code/thread/duino/: osal_duino_sleep.cpp  osal_duino_thread.cpp
code/thread/esp32/: osal_esp32_sleep.cpp
code/thread/freertos/: osal_freertos_thread.c  osal_freertos_thread_priority.cpp  osal_thread.cpp  osal_thread_priority.cpp
code/thread/linux/: osal_linux_sleep.c  osal_linux_thread.c  osal_linux_thread_priority.c  osal_sleep.c  osal_thread.c  osal_thread_priority.c
code/thread/metal/: osal_thread.c  osal_thread_priority.c
code/thread/windows/: osal_sleep.c  osal_thread.c  osal_thread_priority.c  osal_windows_sleep.c  osal_windows_thread.c  osal_windows_thread_priority.c
code/timer/arduino/: osal_timer.cpp
code/timer/common/: osal_timer.h
code/timer/duino/: osal_duino_timer.cpp  osal_timer.cpp
code/timer/esp32/: osal_esp32_timer.cpp
code/timer/linux/: osal_linx_timer.c  osal_timer.c
code/timer/metal/: osal_metal_timer.c  osal_timer.c
code/timer/windows/: osal_timer.c  osal_windows_timer.c
code/utf16/common/: osal_char_utf16_to_utf32.c  osal_char_utf32_to_utf16.c  osal_str_utf16_to_utf8.c  osal_str_utf16_to_utf8_malloc.c  osal_str_utf8_to_utf16.c  osal_str_utf8_to_utf16_malloc.c  osal_string_utf16_to_utf8.c  osal_string_utf16_to_utf8_malloc.c  osal_string_utf8_to_utf16.c  osal_string_utf8_to_utf16_malloc.c  osal_utf16.h
code/utf32/common/: osal_char_utf32_to_utf8.c  osal_char_utf8_to_utf32.c  osal_utf32.h
dependencies/eosal_jpeg/: CMakeLists.txt  eosal_jpeg.h  readme.txt
dependencies/eosal_jpeg/code/: jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jchuff.h  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jconfig.h  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdcoefct.c  jdcolor.c  jdct.h  jdhuff.c  (+29 more)
eosal_esp32/: CMakeLists.txt  readme.txt
examples/ecollection/: CMakeLists.txt  osal_example_collection_main.c  osal_threads_example.c  osal_threads_example.h  osal_threads_example_2.c  osal_threads_example_2.h  platformio.ini  sdkconfig
examples/hello_world/: CMakeLists.txt
examples/persistent/: CMakeLists.txt  platformio.ini
examples/simple_client/: CMakeLists.txt  platformio.ini  sdkconfig.esp32doit-devkit-v1.old  simple_client.ino
examples/socket_client/: CMakeLists.txt  sdkconfig
(+671 files in other folders)
